# ChemAI

./: .gitignore  README.md  pyproject.toml
.virtual_documents/notebooks/: Transformers.ipynb
diff/: tools.py
diff/config/: mapping.yml
diff/models/: chemdiff.py  diffusion.py  scheduler.py  tools.py
diff/preprocessing/: chem.py
llm/: data_utils.py  inference.py  logger.py  prompt.py  reg.py  regex.py  tokenizer.py  tools.py  train.py  train_tokenizer.py
llm/config/: train.yml
llm/models/: block.py  mha.py  quantization.py  tokenizer.py  transformer.py
llm/preprocessing/: loader.py
nnet/models/: negnn.py
notebooks/: 01.DataPrep.ipynb  LBPETokenizer.model  LBPETokenizer.vocab  Transformers.ipynb  converter.ipynb  e3gnn.ipynb  estimate_comput_time.ipynb  images_tutorial.ipynb  moldiff.ipynb  test.ipynb  tokenizer_and_dataloader.ipynb  vram.ipynb
notebooks/.ipynb_checkpoints/: Transformers-checkpoint.ipynb
src/: tools.py  train.py
src/config/: features.yml  mapping.yml
src/models/: diffusion.py  egnn.py  scheduler.py
src/preprocessing/: chem.py
tests/: test_llm.py
