[tool.poetry]
name = "chemai"
version = "0.1.0"
description = ""
authors = ["Adrià Cabello <adrian.cabello@alumni.esci.upf.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
torch = "^2.4.1"
pandas = "^2.2.2"
transformers = "^4.44.2"
huggingface-hub = "^0.25.0"
matplotlib = "^3.9.2"
mlflow = "^2.16.2"
psycopg2 = "^2.9.9"
tensorboard = "^2.17.1"
rdkit = "^2024.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
